title of projects

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>  -->
         <!-- Navigator ends here -->
 
-        <!-- Projects showcase starts here -->
+        <!-- Experiences Section -->
         <section class="px-2 md:px-20">
             <!-- TODO: lines (highlihgt color) on either side of header? -->
             <h2 class="text-gray-800 text-3xl sm:text-4xl text-center pb-4 mb-3 leading-normal tracking-normal font-bold">My experiences</h2>
@@ -154,13 +154,10 @@
             </div> -->
         </section>
 
-        <!-- Projects showcase ends here -->
-
-        <!-- TODO: change to projects -->
-        <!-- Blog posts start here -->
+        <!-- Projects -->
         <section id="products" class="px-2 md:px-0 bg-gray-800">
             <div class="container mx-auto pt-16 px-6 xl:px-0">
-                <h1 class="Sf-ui-pro text-white w-full xl:w-1/4 font-black text-2xl sm:text-4xl">Digital Products for Sale</h1>
+                <h1 class="Sf-ui-pro text-white w-full xl:w-1/4 font-black text-2xl sm:text-4xl">My Projects</h1>
                 <button class="Sf-ui-pro focus:outline-none my-8 flex items-center text-xl text-white font-regular border-b border-white pb-2 mr-3">
                     View all projects
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-narrow-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
