commented out everything incomplete

--- a/index.html
+++ b/index.html
@@ -18,16 +18,17 @@
                     <a href="javascript: void(0)"> 
                         <img loading="lazy" class="w-24" src="./assets/images/logo.png"/> 
                         <!-- TODO:make new image on figma -->
-                    <div>
-                        <div onclick="toggleMenu(true)" class="sm:block md:hidden lg:hidden text-gray-500 hover:text-gray-700 focus:text-gray-700 focus:outline-none">
+                    <!-- <div> -->
+                        <!-- TODO: this click doesn't work -->
+                        <!-- <div onclick="toggleMenu(true)" class="sm:block md:hidden lg:hidden text-gray-500 hover:text-gray-700 focus:text-gray-700 focus:outline-none">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" />
                                 <line x1="4" y1="6" x2="20" y2="6" />
                                 <line x1="4" y1="12" x2="20" y2="12" />
                                 <line x1="4" y1="18" x2="20" y2="18" />
                             </svg>
-                        </div>
-                        <div id="menu" class="md:block lg:block hidden">
+                        </div> -->
+                        <!-- <div id="menu" class="md:block lg:block hidden">
                             <div onclick="toggleMenu(false)" class="block md:hidden lg:hidden text-gray-500 hover:text-gray-700 focus:text-gray-700 fixed focus:outline-none z-30 top-0 pt-4">
                                 <svg aria-haspopup="true" aria-label="Main Menu" xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                     <path stroke="none" d="M0 0h24v24H0z" />
@@ -37,9 +38,9 @@
                             </div>
                             <ul class="flex md:flex text-3xl md:text-base lg:text-base lg:flex flex-col md:flex-row lg:flex-row justify-center items-center fixed md:relative lg:relative top-0 bottom-0 left-0 right-0 bg-white z-20">
                                 <li class="md:mr-8 lg:mr-10 flex items-center">
-                                    <a class="text-gray-800 hover:text-gray-600 pt-10 md:pt-0" href="javascript: void(0)">About</a>
+                                    <a class="text-gray-800 hover:text-gray-600 pt-10 md:pt-0" href="javascript: void(0)">About</a> -->
                                     <!-- TODO: link these header tabs  -->
-                                </li>
+                                <!-- </li>
                                 <li class="md:mr-8 lg:mr-10 flex items-center">
                                     <a class="text-gray-800 hover:text-gray-600 pt-10 md:pt-0" href="javascript: void(0)">Portfolio</a>
                                 </li>
@@ -52,11 +53,11 @@
 
                                 <li class="md:mr-0 flex items-center">
                                     <a class="text-gray-800 hover:text-gray-600 pt-10 md:pt-0" href="javascript: void(0)">Contact</a>
-                                </li>
+                                </li> -->
                                 <!-- TODO: add download resume button -->
-                            </ul>
-                        </div>
-                    </div>
+                            <!-- </ul> -->
+                        <!-- </div> -->
+                    <!-- </div> -->
                 </div>
             </header>
             <section class="mt-8 sm:mt-24 lg:mt-48 mx-auto container py-12 lg:px-4 xl:px-0 mx-auto container ">
@@ -65,17 +66,17 @@
                         <p class="text-2xl text-gray-800 font-light">Hi! My name is</p>
                         <h1 class="text-5xl sm:text-6xl md:text-4xl lg:text-6xl font-extrabold leading-tight text-gray-800">Liza George</h1>
                         <p class="text-lg text-gray-600 font-light leading-relaxed pt-8">[TODO] In quo quaerimus, non provident, similique sunt in voluptate et inter argumentum conclusionemque. Tum dicere exorsus est et quasi architecto beatae vitae dicta sunt, explicabo nemo. Certe inquam, pertinax non emolumento</p>
-                        <button class="Sf-ui-pro mt-10 flex items-center text-xl custom-foreground-color font-regular custom-border-bottom pb-2 mr-3 focus:outline-none">
-                            Connect with me
+                        <!-- <button class="Sf-ui-pro mt-10 flex items-center text-xl custom-foreground-color font-regular custom-border-bottom pb-2 mr-3 focus:outline-none">
+                            Connect with me -->
                             <!-- TODO: link to a mailto?  -->
                             <!-- TODO: add icons to socials  -->
-                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-narrow-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                            <!-- <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-narrow-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" />
                                 <line x1="5" y1="12" x2="19" y2="12" />
                                 <line x1="15" y1="16" x2="19" y2="12" />
                                 <line x1="15" y1="8" x2="19" y2="12" />
                             </svg>
-                        </button>
+                        </button> -->
                     </div>
                     <div class="xl-w-11/12 sm:w-1/2 mt-8 sm:mt-0">
                         <div class="flex items-center justify-center sm:justify-end w-full">
@@ -158,7 +159,7 @@
         <section id="products" class="px-2 md:px-0 bg-gray-800">
             <div class="container mx-auto pt-16 px-6 xl:px-0">
                 <h1 class="Sf-ui-pro text-white w-full xl:w-1/4 font-black text-2xl sm:text-4xl">My Projects</h1>
-                <button class="Sf-ui-pro focus:outline-none my-8 flex items-center text-xl text-white font-regular border-b border-white pb-2 mr-3">
+                <!-- <button class="Sf-ui-pro focus:outline-none my-8 flex items-center text-xl text-white font-regular border-b border-white pb-2 mr-3">
                     View all projects
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-narrow-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" />
@@ -166,7 +167,7 @@
                         <line x1="15" y1="16" x2="19" y2="12" />
                         <line x1="15" y1="8" x2="19" y2="12" />
                     </svg>
-                </button>
+                </button> -->
                 <div class="pb-10 xl:pb-0 lg:flex md:flex xl:justify-around sm:flex flex-wrap md:justify-around sm:justify-around lg:justify-around">
                     <div class="xl:w-1/3 sm:w-5/12 sm:max-w-xs relative mb-10 lg:mb-20 xl:max-w-sm lg:w-1/2 w-full mx-auto sm:mx-0">
                         <div class="shadow h-64 rounded z-10">
@@ -199,11 +200,10 @@
                 </div>
             </div>
         </section>
-        <!-- Blog posts end here -->
 
         <!-- TODO: change logos here <lg> -->
         <!-- Cloud logo starts here -->
-        <div class="py-16 px-0 md:px-15 bg-gray-100 flex flex-wrap rounded items-center">
+        <!-- <div class="py-16 px-0 md:px-15 bg-gray-100 flex flex-wrap rounded items-center">
             <div class="w-1/3 sm:w-1/6 flex justify-center items-center">
                 <img loading="lazy" src="https://cdn.tuk.dev/assets/adidas-gray.png" alt="" />
             </div>
@@ -222,12 +222,12 @@
             <div class="w-1/3 sm:w-1/6 flex justify-center items-center mt-6 sm:mt-0">
                 <img loading="lazy" src="https://cdn.tuk.dev/assets/blackberry-gray.png" alt="" />
             </div>
-        </div>
+        </div> -->
         <!-- Cloud logo ends here -->
 
         <!-- TODO: change to series of links and info -->
         <!-- Cotact section starts here -->
-        <div class="px-0 md:px-20 xl:px-40 mt-16 sm:mt-32 mb-10 sm:mb-20">
+        <!-- <div class="px-0 md:px-20 xl:px-40 mt-16 sm:mt-32 mb-10 sm:mb-20">
             <div class="lg:flex">
                 <div class="xl:w-2/5 lg:w-2/5 bg-gray-800 py-10 xl:rounded-bl rounded-tl rounded-tr xl:rounded-tr-none">
                     <div class="xl:w-5/6 xl:px-0 px-8 mx-auto">
@@ -298,17 +298,13 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Cotact section ends here -->
 
         <!-- Footer section starts here -->
         <div class="w-full px-6 lg:px-20 xl:px-40">
             <div class="container mx-auto py-12">
                 <div class="xl:flex flex-wrap justify-between">
-                    <div class="w-11/12 xl:w-1/3 mx-auto lg:mx-0 xl:mx-0 mb-6 xl:mb-0">
-                        <!-- TODO: check this -->
-                        <p class="text-gray-800 text-base">2022. All Rights Reserved</p>
-                    </div>
                     <!-- <div class="w-11/12 xl:w-1/3 mx-auto lg:mx-0 xl:mx-0 mb-6 lg:mb-0 xl:mb-0">
                         <ul class="xl:flex lg:flex md:flex sm:flex justify-between">
                             <li class="text-gray-800 hover:text-gray-900 text-base mb-4 sm:mb-0"><a href="#">Terms of service</a></li>
@@ -317,9 +313,9 @@
                             <li class="text-gray-800 hover:text-gray-900 text-base mb-4 sm:mb-0"><a href="#">Sitemap</a></li>
                         </ul>
                     </div> -->
-                    <div class="w-11/12 xl:w-1/3 lg:w-1/3 sm:w-1/6 sm:w-11/12 mx-auto lg:mx-0 xl:mx-0 mb-6 lg:mb-0 xl:mb-0 mt-8 lg:mt-8 xl:mt-0">
+                    <!-- TODO: change socila links -->
+                    <!-- <div class="w-11/12 xl:w-1/3 lg:w-1/3 sm:w-1/6 sm:w-11/12 mx-auto lg:mx-0 xl:mx-0 mb-6 lg:mb-0 xl:mb-0 mt-8 lg:mt-8 xl:mt-0">
                         <div class="flex justify-start sm:justify-start xl:justify-end space-x-6 pr-2 xl:pr-0 lg:pr-0 md:pr-0 sm:pr-0">
-                            <!-- TODO: change socila links -->
                             <div>
                                 <a href="#">
                                     <svg aria-label="Twitter" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#718096" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-twitter">
@@ -355,7 +351,7 @@
                                 </a>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
