--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
                 <div class="flex flex-col sm:flex-col md:flex-row lg:flex-row">
                     <div class="flex flex-col lg:w-6/12 md:w-6/12 px-4 lg:px-0 justify-center items-start">
                         <p class="text-2xl text-gray-800 font-light">Hi! My name is</p>
-                        <h1 class="text-5xl sm:text-6xl md:text-4xl lg:text-6xl font-extrabold leading-tight text-gray-800">Liza George</h1>
-                        <p class="text-lg text-gray-600 font-light leading-relaxed pt-8">[TODO] In quo quaerimus, non provident, similique sunt in voluptate et inter argumentum conclusionemque. Tum dicere exorsus est et quasi architecto beatae vitae dicta sunt, explicabo nemo. Certe inquam, pertinax non emolumento</p>
+                        <h1 class="text-5xl sm:text-6xl md:text-4xl lg:text-6xl font-extrabold leading-tight text-gray-800 py-2">Liza George.</h1>
+                        <p class="text-lg text-gray-600 font-light leading-relaxed pt-2">I am a computer science student at the University of Illinois, Urbana Champaign. I love pushing myself in my studies and work, and get excited at any opportunity to learn something new.</p>
+                        <p class="text-lg text-gray-600 font-light leading-relaxed pt-2">Welcome to my dev portfolio website! Scroll around to see a bit of my latest work and experiences. And if you want to get in touch…</p>
                         <!-- <button class="Sf-ui-pro mt-10 flex items-center text-xl custom-foreground-color font-regular custom-border-bottom pb-2 mr-3 focus:outline-none">
                             Connect with me -->
                             <!-- TODO: link to a mailto?  -->
