added connect w me, with mailto link

--- a/index.html
+++ b/index.html
@@ -67,18 +67,21 @@
                         <h1 class="text-5xl sm:text-6xl md:text-4xl lg:text-6xl font-extrabold leading-tight text-gray-800 py-2">Liza George.</h1>
                         <p class="text-lg text-gray-600 font-light leading-relaxed pt-2">I am a computer science student at the University of Illinois, Urbana Champaign. I love pushing myself in my studies and work, and get excited at any opportunity to learn something new.</p>
                         <p class="text-lg text-gray-600 font-light leading-relaxed pt-2">Welcome to my dev portfolio website! Scroll around to see a bit of my latest work and experiences. And if you want to get in touch…</p>
-                        <!-- <button class="Sf-ui-pro mt-10 flex items-center text-xl custom-foreground-color font-regular custom-border-bottom pb-2 mr-3 focus:outline-none">
-                            Connect with me -->
-                            <!-- TODO: link to a mailto?  -->
-                            <!-- TODO: add icons to socials  -->
-                            <!-- <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-narrow-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                                <path stroke="none" d="M0 0h24v24H0z" />
-                                <line x1="5" y1="12" x2="19" y2="12" />
-                                <line x1="15" y1="16" x2="19" y2="12" />
-                                <line x1="15" y1="8" x2="19" y2="12" />
-                            </svg>
-                        </button> -->
+                        <a href="mailto:hi.liza.george@gmail.com" target="_blank" rel="noopener noreferrer">
+                            <button class="Sf-ui-pro mt-10 flex items-center text-xl custom-foreground-color font-regular custom-border-bottom pb-2 mr-3 focus:outline-none">
+                                Connect with me
+                                <!-- TODO: hover action -->
+                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-narrow-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                    <path stroke="none" d="M0 0h24v24H0z" />
+                                    <line x1="5" y1="12" x2="19" y2="12" />
+                                    <line x1="15" y1="16" x2="19" y2="12" />
+                                    <line x1="15" y1="8" x2="19" y2="12" />
+                                </svg>
+                            </button>
+                        </a>
+                        <!-- TODO: add icons to socials  -->
                     </div>
+                    <!-- TODO: update picture -->
                     <div class="xl-w-11/12 sm:w-1/2 mt-8 sm:mt-0">
                         <div class="flex items-center justify-center sm:justify-end w-full">
                             <img loading="lazy" class="w-3/5" src="./assets/images/hero.png" alt="header image" />
