--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <header class="mx-auto container px-4 xl:px-0">
                 <div class="flex items-center justify-between">
                     <a href="javascript: void(0)"> 
-                        <img loading="lazy" class="w-24" src="./assets/images/logo.png"/> 
+                        <img loading="lazy" class="w-24" src="./assets/images/lg_logo_light.png"/> 
                         <!-- TODO:make new image on figma -->
                     <!-- <div> -->
                         <!-- TODO: this click doesn't work -->
