added logo to tab, and created dark mode logo to use later

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link href="https://unpkg.com/tailwindcss@^2.0/dist/tailwind.min.css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700;800&display=swap" rel="stylesheet" />
         <link href="./assets/css/style.css" rel="stylesheet" />
+        <link rel="icon" href="./assets/images/lg_logo_light.png">
         <!-- TODO: search engine optimizations -->
         <!-- TODO:make new image on figma -->
     </head>
